fix for collapse cascading to nested grids

--- a/scss/components/_normalize.scss
+++ b/scss/components/_normalize.scss
@@ -52,7 +52,6 @@ img {
   -ms-interpolation-mode: bicubic;
   width: auto;
   max-width: 100%;
-  float: left;
   clear: both;
   display: block;
 }
@@ -77,7 +76,7 @@ table {
 }
 
 td {
-  word-break: break-word;
+  word-wrap: break-word;
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   hyphens: auto;
